oxidehtf/tests/macro/incorrect_test_return_type.stderr
error[E0308]: mismatched types
 --> tests/macro/incorrect_test_return_type.rs:6:1
  |
6 | #[oxidehtf_macros::tests]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Result<(), TestFailure>`, found `Result<(), u32>`
  |
  = note: expected enum `Result<(), TestFailure>`
             found enum `Result<(), u32>`
  = note: this error originates in the attribute macro `oxidehtf_macros::tests` (in Nightly builds, run with -Z macro-backtrace for more info)
